@@ -9,6 +9,8 @@ MODULE MOD_STATION_TIMESERIES
   LOGICAL OUT_STATION_TIMESERIES_ON
   CHARACTER(LEN=80) STATION_FILE
   CHARACTER(LEN=80) LOCATION_TYPE
+!  LOGICAL READ_GRID_EDGE_FROM_FILE
+  CHARACTER(LEN=80) GRID_EDGE_FILE_NAME
   LOGICAL OUT_ELEVATION
   LOGICAL OUT_VELOCITY_3D
   LOGICAL OUT_VELOCITY_2D
@@ -30,6 +32,8 @@ MODULE MOD_STATION_TIMESERIES
        & OUT_STATION_TIMESERIES_ON,        &
        & STATION_FILE,                     &
        & LOCATION_TYPE,                    &
+!       & READ_GRID_EDGE_FROM_FILE,         &
+       & GRID_EDGE_FILE_NAME,              &
        & OUT_ELEVATION,                    &
        & OUT_VELOCITY_3D,                  &
        & OUT_VELOCITY_2D,                  &
@@ -129,6 +133,7 @@ MODULE MOD_STATION_TIMESERIES
    OUT_STATION_TIMESERIES_ON = .False.
    STATION_FILE         = "'none'"
    LOCATION_TYPE             = "'node' or 'cell'"
+   GRID_EDGE_FILE_NAME       = "'none'"
    OUT_ELEVATION             = .False.
    OUT_VELOCITY_3D           = .False.
    OUT_VELOCITY_2D           = .False.
@@ -247,7 +252,9 @@ MODULE MOD_STATION_TIMESERIES
        IZAJ_MAX = IZAJ_MAX + 1
      END DO
      NSTA=IZAJ_MAX
-     PRINT *,'NSTA=',NSTA
+!JQI NOV2021
+     write(IPT,*) 'NSTA=',NSTA ! KURT GLAESEMANN PRINT *,'NSTA=',NSTA
+!JQI NOV2021
      ALLOCATE(NAME_STA(NSTA))
      ALLOCATE(LAT_STA(NSTA))
      ALLOCATE(LON_STA(NSTA))
@@ -725,7 +732,7 @@ NETCDF_TIMESTRING = 'seconds after 00:00:00'
        
      ierr = nf90_def_var(nc_ofid,"v",nf90_float,dynm2de_lay,v_s_vid)
      ierr = nf90_put_att(nc_ofid,v_s_vid,"long_name","Northward Water Velocity")
-     ierr = nf90_put_att(nc_ofid,u_s_vid,"standard_name","northward_sea_water_velocity")
+     ierr = nf90_put_att(nc_ofid,v_s_vid,"standard_name","northward_sea_water_velocity")
      ierr = nf90_put_att(nc_ofid,v_s_vid,"units","meters s-1")
      ierr = nf90_put_att(nc_ofid,v_s_vid,"type","data")
      ierr = nf90_put_att(nc_ofid,v_s_vid,"coordinates","time siglay station")
@@ -911,14 +918,14 @@ NETCDF_TIMESTRING = 'seconds after 00:00:00'
    call putvar(i1,i2,m,mgl,1,1,"n",lat,nc_ofid,lat_s_vid,myid&
         &,nprocs,ipt, stck_cnt) 
 
-   !!====X Grid Coordinate at Nodes (VX)====================!
-   i1 = lbound(vx,1) ; i2 = ubound(vx,1)
-   call putvar(i1,i2,m,mgl,1,1,"n",vx+vxmin,nc_ofid,x_s_vid,myid,nprocs&
+   !!====X Grid Coordinate at Nodes (XM)====================!
+   i1 = lbound(xm,1) ; i2 = ubound(xm,1)
+   call putvar(i1,i2,m,mgl,1,1,"n",xm,nc_ofid,x_s_vid,myid,nprocs&
         &,ipt, stck_cnt) 
 
-   !!====Y Grid Coordinate at Nodes (VY)====================!
-   i1 = lbound(vy,1) ; i2 = ubound(vy,1)
-   call putvar(i1,i2,m,mgl,1,1,"n",vy+vymin,nc_ofid,y_s_vid,myid,nprocs&
+   !!====Y Grid Coordinate at Nodes (YM)====================!
+   i1 = lbound(ym,1) ; i2 = ubound(ym,1)
+   call putvar(i1,i2,m,mgl,1,1,"n",ym,nc_ofid,y_s_vid,myid,nprocs&
         &,ipt, stck_cnt) 
 
    !!====Bathymetry at Nodes (H)============================!
@@ -1278,50 +1285,87 @@ NETCDF_TIMESTRING = 'seconds after 00:00:00'
    SUBROUTINE TRIANGLE_GRID_EDGE_GL
 
 !==============================================================================|
-!             DEFINE NTVEGL, NBVEGL                                          !
+!             DEFINE NTVEGL, NBVEGL                                            !
 !                                                                              !
-! ntvegl(1:mgl):           total number of the surrounding triangles               !
+! ntvegl(1:mgl):       total number of the surrounding triangles               !
 !                      connected to the given node                             !
-! nbvegl(1:mgl, 1:ntvegl+1): the identification number of surrounding                !
+! nbvegl(1:mgl, 1:ntvegl+1): the identification number of surrounding          !
 !                      triangles with a common node (counted clockwise)        !
 !==============================================================================|
    USE ALL_VARS
    IMPLICIT NONE
-   INTEGER I,J,NCNT,MX_NBR_ELEM_GL
+   LOGICAL FEXIST
+   INTEGER I,J,NCNT,MX_NBR_ELEM_GL,II
+   CHARACTER(LEN=160) :: pathnfile
 
+   pathnfile=trim(INPUT_DIR)//trim(GRID_EDGE_FILE_NAME)
+   INQUIRE(FILE=TRIM(pathnfile),EXIST=FEXIST)
+
+   IF(.NOT. FEXIST)THEN
 !
 !----DETERMINE MAX NUMBER OF SURROUNDING ELEMENTS------------------------------!
 !
-   MX_NBR_ELEM_GL = 0
-   DO I=1,MGL
-     NCNT = 0
-     DO J=1,NGL
-       IF( FLOAT(NVG(J,1)-I)*FLOAT(NVG(J,2)-I)*FLOAT(NVG(J,3)-I) == 0.0_SP) &
-         NCNT = NCNT + 1
+     MX_NBR_ELEM_GL = 0
+     DO I=1,MGL
+       NCNT = 0
+       DO J=1,NGL
+         IF( FLOAT(NVG(J,1)-I)*FLOAT(NVG(J,2)-I)*FLOAT(NVG(J,3)-I) == 0.0_SP) &
+           NCNT = NCNT + 1
+       END DO
+       MX_NBR_ELEM_GL = MAX(MX_NBR_ELEM_GL,NCNT)
      END DO
-     MX_NBR_ELEM_GL = MAX(MX_NBR_ELEM_GL,NCNT)
-   END DO
 
 !
 !----ALLOCATE ARRAYS BASED ON MX_NBR_ELEM--------------------------------------!
 ! 
-   ALLOCATE(NTVEGL(MGL));                  NTVEGL = 0
-   ALLOCATE(NBVEGL(MGL,MX_NBR_ELEM_GL+1)); NBVEGL = 0
+     ALLOCATE(NTVEGL(MGL));                  NTVEGL = 0
+     ALLOCATE(NBVEGL(MGL,MX_NBR_ELEM_GL+1)); NBVEGL = 0
 !
 !--DETERMINE NUMBER OF SURROUNDING ELEMENTS FOR NODE I = NTVEGL(I)---------------!
 !--DETERMINE NBVEGL - INDICES OF NEIGHBORING ELEMENTS OF NODE I------------------!
 !
        
-   DO I=1,MGL
-     NCNT=0
-     DO J=1,NGL
-       IF (FLOAT(NVG(J,1)-I)*FLOAT(NVG(J,2)-I)*FLOAT(NVG(J,3)-I) == 0.0_SP)THEN
-         NCNT = NCNT+1
-         NBVEGL(I,NCNT)=J
-       END IF
+     DO I=1,MGL
+       NCNT=0
+       DO J=1,NGL
+         IF (FLOAT(NVG(J,1)-I)*FLOAT(NVG(J,2)-I)*FLOAT(NVG(J,3)-I) == 0.0_SP)THEN
+           NCNT = NCNT+1
+           NBVEGL(I,NCNT)=J
+         END IF
+       ENDDO
+       NTVEGL(I)=NCNT
      ENDDO
-     NTVEGL(I)=NCNT
-   ENDDO
+   
+     IF(MSR)THEN
+       pathnfile = trim(INPUT_DIR)//trim(GRID_EDGE_FILE_NAME)             
+       OPEN(10,file=trim(pathnfile))
+
+!  Added by Zheng
+       WRITE(10,'(I4)') MX_NBR_ELEM_GL+1
+!  Added by Zheng
+
+       DO I=1,MGL
+         WRITE(10,'(2I10,<MX_NBR_ELEM_GL+1>I10)') I,NTVEGL(I),(NBVEGL(I,J),J=1,NTVEGL(I))
+       END DO
+       CLOSE(10)
+     END IF
+   ELSE
+     pathnfile = trim(INPUT_DIR)//trim(GRID_EDGE_FILE_NAME)             
+     OPEN(10,file=trim(pathnfile))
+
+!  Added by Zheng
+     READ(10,'(I4)') MX_NBR_ELEM_GL
+     ALLOCATE(NTVEGL(MGL));                  NTVEGL = 0
+     ALLOCATE(NBVEGL(MGL,MX_NBR_ELEM_GL));   NBVEGL = 0
+!  Added by Zheng
+
+     DO I=1,MGL
+       READ(10,*) II,NTVEGL(I),(NBVEGL(I,J),J=1,NTVEGL(I))
+     END DO
+   
+     CLOSE(10)
+   
+   END IF
 
    RETURN
    END SUBROUTINE TRIANGLE_GRID_EDGE_GL
